--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 title: 行骏
 subtitle: ''
 description: ''
-keywords:
-author: Xj Ye
+keywords: ''
+author: 'Xj Ye'
 language: en
 timezone: ''
 
@@ -28,7 +28,7 @@ archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
-skip_render:
+skip_render: README.md
 
 # Writing
 new_post_name: :title.md # File name of new posts
@@ -103,5 +103,7 @@ theme: light
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: git@github.com:movinghorse/movinghorse.github.com.git
+  repo: git@github.com:movinghorse/blog.git
   branch: main
+  name: movinghorse
+  email: movinghorse@hotmail.com
